--- a/src/Autodash.Core/packages.config
+++ b/src/Autodash.Core/packages.config
@@ -4,4 +4,5 @@
   <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
 </packages>
