created classes for Ms Test Report file. Deserializing just fine.

--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsTestExecutionReport.cs" />
     <Compile Include="DefaultSuiteRunner.cs" />
     <Compile Include="Dynamic.cs" />
     <Compile Include="IUnitTestDiscoverer.cs" />
