unit testing scheduler

--- a/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
+++ b/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="AsyncLock.cs" />
     <Compile Include="CreateProjectCommandTests.cs" />
     <Compile Include="CreateSuiteCommandTests.cs" />
+    <Compile Include="DefaultSuiteRunSchedulerTests.cs" />
     <Compile Include="MongoTestDbProvider.cs" />
     <Compile Include="MSTestDiscovererTests.cs" />
     <Compile Include="MsTestRunnerTests.cs" />
