--- a/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
+++ b/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="MongoTestDbProvider.cs" />
     <Compile Include="MSTestDiscovererTests.cs" />
     <Compile Include="MsTestRunnerTests.cs" />
+    <Compile Include="NSubstituteHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSuiteScheduleTests.cs" />
     <Compile Include="UnitTestTagSelectorTests.cs" />
