working on scheduler

--- a/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
+++ b/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="MsTestRunnerTests.cs" />
     <Compile Include="NSubstituteHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduleOnDemandTestSuiteTests.cs" />
     <Compile Include="TestSuiteScheduleTests.cs" />
     <Compile Include="UnitTestTagSelectorTests.cs" />
   </ItemGroup>
