--- a/src/Autodash.Core/packages.config
+++ b/src/Autodash.Core/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentValidation" version="5.5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
+  <package id="Nancy" version="1.2.0" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="1.2.0" targetFramework="net45" />
 </packages>
