fixing packages references for moved projects, making IoC work, adding tool to run mongo from cmd.

--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -124,6 +124,7 @@
     <Content Include="UI\Views\CreateProject.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="UI\Views\CreateSuite.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="UI\Content\main.css">
