--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -75,6 +75,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultTestSuiteUnitTestDiscoverer.cs" />
+    <Compile Include="ITestSuiteUnitTestDiscoverer.cs" />
     <Compile Include="MsTestExecutionReport.cs" />
     <Compile Include="DefaultSuiteRunner.cs" />
     <Compile Include="Dynamic.cs" />
@@ -104,7 +106,9 @@
     <Compile Include="UI\CustomConventionsBootstrapper.cs" />
     <Compile Include="UI\Models\CreateProjectVm.cs" />
     <Compile Include="UI\Models\CreateSuiteVm.cs" />
+    <Compile Include="UI\Models\EditSuiteVm.cs" />
     <Compile Include="UI\Models\ProjectsVm.cs" />
+    <Compile Include="UI\Models\SuiteDetailsVm.cs" />
     <Compile Include="UI\Modules\ProjectsModule.cs" />
     <Compile Include="UI\Modules\SuitesModule.cs" />
     <Compile Include="UI\RazorConfig.cs" />
@@ -117,6 +121,9 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="UI\Views\Projects.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="UI\Views\SuiteDetails.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="UI\Views\_Layout.cshtml">
