started work on grid pages.

--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -113,8 +113,11 @@
     <Compile Include="UI\Models\SuiteRunDetailsVm.cs" />
     <Compile Include="UI\Models\TestExplorerVm.cs" />
     <Compile Include="UI\Models\ProjectDetailsVm.cs" />
+    <Compile Include="UI\Models\GridConfigVm.cs" />
+    <Compile Include="UI\Modules\GridModule.cs" />
     <Compile Include="UI\Modules\ProjectsModule.cs" />
     <Compile Include="UI\Modules\RunsModule.cs" />
+    <Compile Include="SeleniumGridConfiguration.cs" />
     <Compile Include="UI\Modules\SuitesModule.cs" />
     <Compile Include="UI\RazorConfig.cs" />
     <Compile Include="UnitTestBrowserResult.cs" />
@@ -167,6 +170,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="UI\Views\_SuiteTests.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="UI\Views\GridConfig.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
