--- a/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
+++ b/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="CreateProjectCommandTests.cs" />
     <Compile Include="CreateSuiteCommandTests.cs" />
     <Compile Include="DefaultSuiteRunSchedulerTests.cs" />
+    <Compile Include="GridNodeInfoTests.cs" />
     <Compile Include="MongoTestDbProvider.cs" />
     <Compile Include="MSTestDiscovererTests.cs" />
     <Compile Include="MsTestRunnerTests.cs" />
