adding tests for scraper

--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -76,8 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultTestSuiteUnitTestDiscoverer.cs" />
-    <Compile Include="GridConsoleScraper.cs" />
-    <Compile Include="GridNodeInfo.cs" />
+    <Compile Include="DefaultGridConsoleScraper.cs" />
+    <Compile Include="GridNodeBrowserInfo.cs" />
     <Compile Include="IGridConsoleScraper.cs" />
     <Compile Include="ITestSuiteUnitTestDiscoverer.cs" />
     <Compile Include="MongoDatabaseExtensions.cs" />
