more work on parallel execution

--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoundedUpdatableCollection.cs" />
     <Compile Include="DefaultTestSuiteUnitTestDiscoverer.cs" />
     <Compile Include="DefaultGridConsoleScraper.cs" />
     <Compile Include="GridNodeBrowserInfo.cs" />
