--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuiteRun.cs" />
+    <Compile Include="SuiteRunForRunnerValidator.cs" />
     <Compile Include="SuiteRunResult.cs" />
     <Compile Include="SuiteRunResultStatus.cs" />
     <Compile Include="SuiteRunStatus.cs" />
