--- a/tests/Autodash.Core.Tests/packages.config
+++ b/tests/Autodash.Core.Tests/packages.config
@@ -5,6 +5,11 @@
   <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
   <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="xunit" version="2.0.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
