--- a/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
+++ b/tests/Autodash.Core.Tests/Autodash.Core.Tests.csproj
@@ -87,10 +87,12 @@
     <Compile Include="MSTestDiscovererTests.cs" />
     <Compile Include="MsTestRunnerTests.cs" />
     <Compile Include="NSubstituteHelper.cs" />
+    <Compile Include="ParallelSuiteRunContextTests.cs" />
     <Compile Include="ParallelSuiteRunSchedulerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduleOnDemandTestSuiteTests.cs" />
     <Compile Include="TestSuiteScheduleTests.cs" />
+    <Compile Include="UnitTestResultTests.cs" />
     <Compile Include="UnitTestTagSelectorTests.cs" />
   </ItemGroup>
   <ItemGroup>
