--- a/src/Autodash.Core/packages.config
+++ b/src/Autodash.Core/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentValidation" version="5.5.0.0" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
@@ -8,4 +9,9 @@
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
   <package id="Nancy" version="1.2.0" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.2.0" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
 </packages>
