--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -124,6 +124,7 @@
     <Compile Include="ObservableExtensions.cs" />
     <Compile Include="ParallelSuiteRunContext.cs" />
     <Compile Include="ParallelSuiteRunner.cs" />
+    <Compile Include="ParallelSuiteRunner2.cs" />
     <Compile Include="ParallelSuiteRunScheduler.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
