--- a/src/Autodash.ConsoleHost/App.config
+++ b/src/Autodash.ConsoleHost/App.config
@@ -1,6 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+  <nlog>
+    <targets>
+      <target name="file" type="File"
+        layout="${longdate}, ${logger}, ${message}"
+        fileName="${basedir}/logs/logfile.txt"
+        archiveFileName="${basedir}/logs/log.{#}.txt"
+        archiveEvery="Day"
+        archiveNumbering="Rolling"
+        maxArchiveFiles="7"
+        concurrentWrites="true" />
+      <target name="console" type="Console" layout="${longdate}, ${logger}, ${message}" />
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Info" writeTo="console" />
+      <logger name="*" minlevel="Info" writeTo="file" />
+    </rules>
+  </nlog>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
+    <add key="Repository.NotUsed" value=""/>
+  </appSettings>
 </configuration>
