--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -63,7 +63,12 @@
     <Reference Include="Nancy.ViewEngines.Razor">
       <HintPath>..\..\packages\Nancy.Viewengines.Razor.1.2.0\lib\net40\Nancy.ViewEngines.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\NLog.4.0.1\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Reactive.Core">
@@ -101,6 +106,7 @@
     <Compile Include="GridNodeInfo.cs" />
     <Compile Include="GridNodeManager.cs" />
     <Compile Include="IGridConsoleScraper.cs" />
+    <Compile Include="ILoggerProvider.cs" />
     <Compile Include="ISuiteRunSchedulerRepository.cs" />
     <Compile Include="ITestRunnerPreProcessor.cs" />
     <Compile Include="ITestSuiteFileExplorer.cs" />
@@ -121,11 +127,11 @@
     <Compile Include="ITestAssembliesRepository.cs" />
     <Compile Include="MsTestDiscoverer.cs" />
     <Compile Include="MsTestRunner.cs" />
-    <Compile Include="ObservableExtensions.cs" />
     <Compile Include="ParallelSuiteRunner.cs" />
     <Compile Include="ParallelSuiteRunScheduler.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RxExtensions.cs" />
     <Compile Include="SuiteRun.cs" />
     <Compile Include="SuiteRunForRunnerValidator.cs" />
     <Compile Include="SuiteRunResult.cs" />
