--- a/src/Autodash.Core/packages.config
+++ b/src/Autodash.Core/packages.config
@@ -9,6 +9,7 @@
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
   <package id="Nancy" version="1.2.0" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.2.0" targetFramework="net45" />
+  <package id="NLog" version="4.0.1" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
