--- a/src/Autodash.ConsoleHost/App.config
+++ b/src/Autodash.ConsoleHost/App.config
@@ -24,6 +24,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="Repository.NotUsed" value=""/>
+    <add key="RepositoryPath.NotUsed" value=""/>
   </appSettings>
 </configuration>
