final touches on email

--- a/src/Autodash.ConsoleHost/App.config
+++ b/src/Autodash.ConsoleHost/App.config
@@ -25,5 +25,6 @@
   </startup>
   <appSettings>
     <add key="RepositoryPath.NotUsed" value=""/>
+    <add key="WebsiteRoot" value="http://localhost:8080"/>
   </appSettings>
 </configuration>
