more fixes to parallel run

--- a/src/Autodash.Core/Autodash.Core.csproj
+++ b/src/Autodash.Core/Autodash.Core.csproj
@@ -176,6 +176,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="UI\Content\js\global.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="UI\Content\js\suite-details.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
